[package]
name = "lstm"
version = "0.1.0"
edition = "2021"

[dependencies]
arrayfire = "3.8"
protobuf = "3"
queue = "0.3.1"
ndarray = { version = "0.15", features = ["serde"] } 
ndarray-rand = "0.14"
rand_chacha = "0.3.1"
bincode = "1.3.3"

[build-dependencies]
protobuf-codegen = "3.2"
protoc-rust = "^2.0"
